@@ -134,7 +134,7 @@ function generateListing(env, callback, root, pathInfo, scriptName) {
 
     var title = 'Index of ' + pathInfo;
     var name = 'Strata';
-    var version = strata.version.join('.');
+    var version = strata.version;
     var content = util.format(page, title, title, rows, name, version);
 
     callback(200, {
