@@ -7,12 +7,13 @@ var Stream = require('stream');
 var BufferedStream = require('bufferedstream');
 var UserError = require('usererror');
 var utils = require('./utils');
+var strata = module.exports;
 
 // The current version of Strata as [major, minor, patch].
-exports.version = [0, 19, 3];
+strata.version = '0.19.3';
 
 // The default port that Strata servers run on.
-exports.defaultPort = 1982;
+strata.defaultPort = 1982;
 
 /**
  * The maximum amount of data that is buffered from incoming requests before
@@ -23,7 +24,7 @@ exports.defaultPort = 1982;
  * expecting a large request body it will start reading from the input stream
  * very soon after the request is received and the buffer will be emptied.
  */
-exports.maxBufferSize = 1024 * 2; // 2K
+strata.maxBufferSize = 1024 * 2; // 2K
 
 // Setup methods that can be called directly on this module that will delegate
 // to the default build. This is the high-level sugar API.
@@ -39,13 +40,13 @@ function defaultApp() {
 }
 
 ['use', 'map', 'route', 'get', 'post', 'put', 'delete', 'head', 'options'].forEach(function (method) {
-  exports[method] = function () {
+  strata[method] = function () {
     var app = defaultApp();
     return app[method].apply(app, arguments);
   };
 });
 
-exports.__defineGetter__('app', function () {
+strata.__defineGetter__('app', function () {
   return _defaultApp;
 });
 
@@ -54,7 +55,7 @@ exports.__defineGetter__('app', function () {
  * given it may contain any properties used to create and start the server
  * (see createServer and startServer).
  */
-exports.run = run;
+strata.run = run;
 function run(app, opts, listeningListener) {
   if (typeof app === 'function') {
     // If the user supplies an app here and we already have a _defaultApp
@@ -93,7 +94,7 @@ function run(app, opts, listeningListener) {
  * If given, the requestListener callback is bound to the "request" event
  * of the server.
  */
-exports.createServer = createServer;
+strata.createServer = createServer;
 function createServer(opts, requestListener) {
   if (typeof opts === 'function') {
     requestListener = opts;
@@ -129,7 +130,7 @@ function createServer(opts, requestListener) {
  * If given, the listeningListener callback is bound to the "listening" event
  * of the server.
  */
-exports.startServer = startServer;
+strata.startServer = startServer;
 function startServer(server, opts, listeningListener) {
   if (typeof opts === 'function') {
     listeningListener = opts;
@@ -142,7 +143,7 @@ function startServer(server, opts, listeningListener) {
     server.on('listening', function () {
       var addr = server.address();
 
-      var msg = '>> Strata web server version ' + exports.version.join('.');
+      var msg = '>> Strata web server version ' + strata.version;
       msg += ' running on node ' + process.versions.node + '\n';
       msg += '>> Listening on ' + addr.address;
 
@@ -163,7 +164,7 @@ function startServer(server, opts, listeningListener) {
   if (opts.socket) {
     server.listen(opts.socket);
   } else {
-    server.listen(opts.port || exports.defaultPort, opts.host);
+    server.listen(opts.port || strata.defaultPort, opts.host);
   }
 }
 
@@ -171,7 +172,7 @@ function startServer(server, opts, listeningListener) {
  * Binds the given app to be called whenever the given server receives a
  * new request.
  */
-exports.bind = bind;
+strata.bind = bind;
 function bind(app, server) {
   var protocol;
   if (server instanceof https.Server) {
@@ -248,7 +249,7 @@ function bind(app, server) {
  *   - input            The input stream of the request body
  *   - error            The error stream
  */
-exports.env = makeEnv;
+strata.env = makeEnv;
 function makeEnv(opts) {
   opts = opts || {};
 
@@ -279,7 +280,7 @@ function makeEnv(opts) {
   }
 
   // Buffer the input stream up to the size specified in strata.maxBufferSize.
-  env.input = new BufferedStream(exports.maxBufferSize, opts.input || '');
+  env.input = new BufferedStream(strata.maxBufferSize, opts.input || '');
 
   // The input stream is paused so that we don't miss any data events that
   // are registered on future ticks.
@@ -295,7 +296,7 @@ function makeEnv(opts) {
     env.error = process.stderr;
   }
 
-  env.strataVersion = exports.version;
+  env.strataVersion = strata.version;
 
   return env;
 }
@@ -309,7 +310,7 @@ function makeEnv(opts) {
  * error that occurs inside a callback should pass that object as the first
  * argument to the caller.
  */
-exports.call = call;
+strata.call = call;
 function call(app, env, callback) {
   if (typeof app !== 'function') {
     throw new Error('App must be a function');
@@ -352,7 +353,7 @@ function call(app, env, callback) {
  * is issued the calling code may assume that the error was successfully
  * recovered and should continue.
  */
-exports.handleError = handleError;
+strata.handleError = handleError;
 function handleError(err, env, callback) {
   var stack = err.fullStack || err.stack;
 
@@ -410,7 +411,7 @@ var modules = {
 
 for (var propertyName in modules) {
   (function (path) {
-    exports.__defineGetter__(propertyName, function () {
+    strata.__defineGetter__(propertyName, function () {
       return require('./' + path);
     });
   })(modules[propertyName]);
