@@ -92,12 +92,8 @@ function checkEnv(env) {
   assert(env.error instanceof Stream, 'error must be a Stream');
   assert(env.error.writable, 'error must be writable');
 
-  // - strataVersion     An array of integers that indicate the current version of
-  assert(Array.isArray(env.strataVersion), 'strataVersion must be an array');
-  assert(env.strataVersion.length === 3, 'strataVersion must contain three values [major, minor, patch]');
-  env.strataVersion.forEach(function (n, i) {
-    assert(typeof n === 'number', 'Index ' + i + ' of strataVersion must be a number');
-  });
+  // - strataVersion     A string that indicates the current version of strata
+  assert(typeof env.strataVersion === 'string', 'strataVersion must be a string');
 
   // - flash        A string containing the flash message
   var flash = env.flash;
