@@ -4,6 +4,7 @@
     that may contain multi-byte characters.
   * Fix deprecation warning from using util.pump.
   * Removed strata.Error to simplify error handling.
+  * strata.version is a string according to semver.
 
 = 0.19.3 / 2012-12-21
 
